--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@craftjs/core": "^0.1.0-beta.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@types/jest": "^26.0.18",
