--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "entities": "^2.0.3",
@@ -26,6 +27,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^1.1.3",
     "style-loader": "^0.23.1",
